--- a/layouts/_shortcodes/homepage/hero.html
+++ b/layouts/_shortcodes/homepage/hero.html
@@ -8,16 +8,18 @@
 <div class="col">
 <div class="container">
 <div class="hero-simple text-center pt-5 pb-0">
-  {{- if $useLogo -}}
+  {{ if $useLogo -}}
   <div class="hero-simple__logo mb-4">
     <img src="/img/logos/opentelemetry-horizontal-color.svg" alt="OpenTelemetry" class="hero-simple__logo-img">
   </div>
-  {{- end -}}
-  {{- with $tagline -}}
+  {{ end -}}
+  {{ with $tagline -}}
   <p class="hero-simple__tagline mb-4">{{ . }}</p>
-  {{- end -}}
+  {{ end -}}
   <div class="hero-simple__content">
-    {{ .Inner | markdownify }}
+
+{{ .Inner }}
+
   </div>
 </div>
 </div>
