Remove unused cSpell words and update dictionaries
Cleaned up cSpell ignore lists in multiple markdown files by removing unused words, notably 'logback', 'myapp', and 'textlintrc'. Updated word lists in .cspell/ for several languages, added a README, and adjusted scripts and package.json to improve dictionary normalization and sorting.

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -19,6 +19,7 @@
       text-decoration: $link-decoration;
     }
 
+    // TODO: remove once Docsy is updated.
     &:focus,
     // Bootstrap sets .nav-link:focus-visible, but in a way that isn't
     // compatible with dark mode. This is a known issue, see
