Fix homepage horizontal overflow and some shortcodes do support md

--- a/layouts/_shortcodes/homepage/intro-section.html
+++ b/layouts/_shortcodes/homepage/intro-section.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="intro-content">
         <div class="intro-text">
-          {{ .Inner | .Page.RenderString }}
+          {{ .Inner -}}
         </div>
         {{ with $image -}}
         <div class="intro-image">
