--- a/layouts/_markup/render-link.html
+++ b/layouts/_markup/render-link.html
@@ -94,17 +94,8 @@
     (not ($u.Query.Has "disable_http_check"))
     (not (findRE `\blocalhost\b|^127\.0` $u.Host))
 -}}
-
-  {{/*
-    TODO: drop the temporary allowance of various hosts such as publicsuffix.org once
-    https://github.com/open-telemetry/opentelemetry.io/issues/6409
-    is fully resolved.
-  */ -}}
-  {{ if findRE `^(publicsuffix.org|docs.oasis|unitsofmeasure|connect.build)` $u.Host -}}
-    {{/* Do nothing until semconv fixes land. */ -}}
-  {{ else -}}
-    {{ warnf "%s: use 'https' for external URL '%s', or add query parameter '?disable_http_check'" .Page.File.Path $dest -}}
-  {{ end -}}
+  {{/* TODO: move this check to an mdl rule */ -}}
+  {{ warnf "%s: use 'https' for external URL '%s', or add query parameter '?disable_http_check'" .Page.File.Path $dest -}}
 {{ end -}}
 
 {{/* General link-render processing */ -}}
