chore(render-link): move spec-specific logic into its own hook

--- a/layouts/_markup/render-link.html
+++ b/layouts/_markup/render-link.html
@@ -1,55 +1,6 @@
 {{ $u := urls.Parse .Destination -}}
 {{- $href := $u.String -}}
 
-{{/* This processing part is for OTel specs only ------------------------- */ -}}
-
-{{ if and
-    (hasPrefix $.PageInner.RelPermalink "/docs/specs")
-    (not $u.IsAbs)
-    (not (hasPrefix $href "#"))
--}}
-
-  {{ $path := replaceRE `\bREADME\.md\b` "_index.md" $u.Path -}}
-  {{ with or
-    ($.PageInner.GetPage $path)
-    ($.PageInner.Resources.Get $path)
-    (resources.Get $path)
-  -}}
-    {{ $href = .RelPermalink -}}
-    {{ with $u.RawQuery -}}{{ $href = printf "%s?%s" $href . -}}{{ end -}}
-    {{ with $u.Fragment -}}{{ $href = printf "%s#%s" $href . -}}{{ end -}}
-  {{ else -}}
-
-    {{/* We can't find a page for $url.
-
-    - If $url refers to a Markdown file, issue a warning, since we should be
-      able to find it.
-
-    - Otherwise, it's a path to a resource file. Most often, $path is absolute,
-      and the resource is inside a page bundle. Hugo's global or page Resource.Get
-      can't handle that, so just ignore the issue. If there is a real problem, and
-      the path is invalid, it will be caught by the link checker.
-
-    - If the resource path starts with `./`, adjust it to be `../` to match
-      GitHub's relative paths, provide the page this link is in is not an index
-      page.
-
-    */ -}}
-
-    {{ if hasSuffix $path ".md" -}}
-      {{ warnf "File %s: cannot resolve spec link reference '%s' (%s)" .Page.File.Filename $href $path -}}
-    {{ else -}}
-      {{ if and
-            (hasPrefix $href "./")
-            (not (hasSuffix .Page.File.Filename "_index.md"))
-            (not (hasSuffix .Page.File.Filename "README.md"))
-      -}}
-        {{ $href = add "." $href -}}
-      {{ end -}}
-      {{ warnidf "spec-resource-not-found" "File %s: cannot resolve spec link reference '%s' (%s)" .Page.File.Filename $href $path -}}
-    {{ end -}}
-  {{ end -}}
-
 {{- /* ---------------------------------------------------------------------
 
   This processing part is based on Hugo's default render-link hook:
@@ -86,24 +37,23 @@
 
   */ -}}
 
-{{ else
-  if not (hasPrefix .Destination "/") -}}
+{{ if not (hasPrefix .Destination "/") -}}
   {{/* Relative path: leave as is */ -}}
-  {{- else if and $href (not $u.IsAbs) -}}
-    {{- $path := strings.TrimPrefix "./" $u.Path -}}
-    {{- with or
-      ($.PageInner.GetPage $path)
-      ($.PageInner.Resources.Get $path)
-      (resources.Get $path)
-    -}}
-      {{- $href = .RelPermalink -}}
-      {{- with $u.RawQuery -}}
-        {{- $href = printf "%s?%s" $href . -}}
-      {{- end -}}
-      {{- with $u.Fragment -}}
-        {{- $href = printf "%s#%s" $href . -}}
-      {{- end -}}
+{{- else if and $href (not $u.IsAbs) -}}
+  {{- $path := strings.TrimPrefix "./" $u.Path -}}
+  {{- with or
+    ($.PageInner.GetPage $path)
+    ($.PageInner.Resources.Get $path)
+    (resources.Get $path)
+  -}}
+    {{- $href = .RelPermalink -}}
+    {{- with $u.RawQuery -}}
+      {{- $href = printf "%s?%s" $href . -}}
     {{- end -}}
+    {{- with $u.Fragment -}}
+      {{- $href = printf "%s#%s" $href . -}}
+    {{- end -}}
+  {{- end -}}
 {{- end -}}
 
 {{/* General link-render processing */ -}}
