Move repo-path processing from spec to base render-link hook

--- a/layouts/_markup/render-link.html
+++ b/layouts/_markup/render-link.html
@@ -1,6 +1,1 @@
-{{ $u := urls.Parse .Destination -}}
-
-{{- partial "hooks/render-link.html" (dict
-    "ctx" .
-    "urlParsed" $u)
--}}
+{{- partial "hooks/render-link.html" (dict "ctx" .) -}}
